--- a/blog/2022-03-15-vercel.md
+++ b/blog/2022-03-15-vercel.md
@@ -1,7 +1,8 @@
 ---
 slug: vercel
 title: vercel
-
+authors: [Pisco]
+tags: [Pisco, test]
 ---
 
-# 使用 Vercel 部署个人博客前端静态站点
+使用 Docusaurus 和 Vercel 部署个人博客前端静态站点
